--- a/package.json
+++ b/package.json
@@ -7,5 +7,11 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "@ai-sdk/openai": "^2.0.0-beta.16",
+    "ai": "^5.0.0-beta.34",
+    "dotenv": "^17.2.1",
+    "zod": "^4.1.3"
   }
 }
